--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Etch-a-Sketch</title>
 </head>
 <body>
+    <div class="button"><button class="how">How many squares per side do you want?</button></div>
     <div class="container">
         
     </div>
